<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    tools:context=".MainActivity"
    tools:showIn="@layout/fragment_chem_utils">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button style="@style/Base.Widget.AppCompat.Button.Colored"
            android:theme="@style/EquationInput.Button"
            android:id="@+id/paste_clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/equation_paste_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/left_equation_edittext" />

        <EditText
            android:id="@+id/left_equation_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+()[] "
            android:gravity="center"
            android:hint="@string/LHSEqnHint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/equation_yields_symbol"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/equation_yields_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equation_yields_symbol"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/left_equation_edittext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/right_equation_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+() "
            android:gravity="center"
            android:hint="@string/RHSEqnHint"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/equation_yields_symbol"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button style="@style/Base.Widget.AppCompat.Button.Colored"
            android:theme="@style/Balance.Button"
            android:id="@+id/balance_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/balance_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/paste_clear_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <android.support.constraint.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="25dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>